--- a/css/grid-breeds.css
+++ b/css/grid-breeds.css
@@ -1,6 +1,6 @@
 h2{
     margin: 40px;
-    font-family: font-family: 'Palatino', Georgia, 'Times New Roman';
+    font-family: 'Palatino', Georgia, 'Times New Roman';
     font-size: 25px;
     font-weight: 600;
     text-align: center;
