--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 /* For Header */
 .header_nav_mobile{
-    background-color: yellowgreen;
+    background-color: #9eb675;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
     width: auto\9;
@@ -37,7 +37,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    margin-right: 50px;
+    margin-right: 30px;
   }
 
   .header_nav_mobile {
@@ -53,13 +53,15 @@
 
   .dropdown-content {
     display: none;
-    position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    position: fixed;
+    top: 64;
+    right: 0;
+    min-width: 130px;
     overflow: scroll;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    margin-right: 30px;
+    
   }
   
   .dropdown-content a {
@@ -71,7 +73,10 @@
   
   .dropdown a:hover {background-color: #ddd;}
   
-  .show {display: block;}
+  .show {
+    display: block;
+    
+  }
 #logo{
     max-height: 100%;
     justify-content: start;
@@ -88,7 +93,7 @@ h1{
 
 
 /* For background */
-#PC_home{
+#PC_home_img{
     display:none;
 }
 /* body{
@@ -99,9 +104,67 @@ main {
     margin-top: 60px;
     margin-bottom: 30px;
 }
-#Mobile_home{
+#Mobile_home_img{
   max-height:800px;
   width: auto\9;
   display:grid;
   justify-content: center;
+}
+
+
+@media screen and (min-width:1000px) {
+  .header_nav_mobile{
+    display:none;
+  }
+  .header_nav_pc{
+    background-color: black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-style: bold;
+    width: 100%;
+    height: 60px;
+    display: inline-flex;
+    justify-content: space-between;
+  }
+  main{
+    margin-top: 0px;
+  }
+  .header_nav_pc ul{
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+  }
+  .nav_link:hover{
+    font-weight: bolder;
+    color: coral;
+    
+  }
+  .active {
+    font-weight: bolder;
+    border-radius: 5px;
+    border: solid white;
+  }
+  .nav_link:focus{
+    font-weight: bolder;
+    color: coral;
+  }
+  .nav_link{
+    color: white;
+    text-decoration: none;
+  }
+  
+  h1{
+    font-size: x-large;
+    color: white;
+  }
+
+  #Mobile_home_img{
+    display:none;
+  }
+  #PC_home_img{
+    display:block;
+    width:100%;
+    height:100%;
+  }
+
 }
