--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 }
 /* For Header */
 .header_nav_mobile{
-    background-color: #9eb675;
+    background-color: black;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
     width: auto\9;
@@ -77,13 +77,14 @@
     display: block;
     
   }
-#logo{
+.logo{
     max-height: 100%;
     justify-content: start;
 }
 
 h1{
     margin: 5px;
+    color: whitesmoke;
     font-family: 'Palatino', Georgia, 'Times New Roman', Times, serif;
     font-size:large;
     font-style: bold;
@@ -96,21 +97,23 @@ h1{
 #PC_home_img{
     display:none;
 }
-/* body{
-    background-image: url(../images/home_phone.jpeg);
-    
-} */
-main {
-    margin-top: 60px;
-    margin-bottom: 30px;
+#extend_bg_home_mobile{
+  display:block;
+  width: 100%;
+  height: auto;
 }
 #Mobile_home_img{
-  max-height:800px;
-  width: auto\9;
+  display:block;
+  width: 100%;
+  height: auto;
   display:grid;
   justify-content: center;
 }
-
+@media screen and (min-width:600px){
+  #extend_bg_home_mobile{
+    display:none;
+  }
+}
 
 @media screen and (min-width:1000px) {
   .header_nav_mobile{
@@ -121,7 +124,7 @@ main {
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: bold;
     width: 100%;
-    height: 60px;
+    height: 80px;
     display: inline-flex;
     justify-content: space-between;
   }
@@ -136,25 +139,29 @@ main {
   }
   .nav_link:hover{
     font-weight: bolder;
-    color: coral;
+    color: #2980B9
+    ;
     
   }
   .active {
     font-weight: bolder;
     border-radius: 5px;
     border: solid white;
+    padding: 10px;
   }
   .nav_link:focus{
     font-weight: bolder;
-    color: coral;
+    color: #2980B9
+    ;
   }
   .nav_link{
     color: white;
+    font-size: large;
     text-decoration: none;
   }
   
   h1{
-    font-size: x-large;
+    font-size: xx-large;
     color: white;
   }
 
