--- a/css/grid-breeds.css
+++ b/css/grid-breeds.css
@@ -1,7 +1,7 @@
 h2{
     margin: 40px;
     font-family: 'Palatino', Georgia, 'Times New Roman';
-    font-size: 25px;
+    font-size: 50px;
     font-weight: 600;
     text-align: center;
 }
@@ -18,13 +18,38 @@ h2{
     width: 90%;
     height: 90%;
     border: solid #000000 5px;
-    display:grid;
-   
+    display:grid; 
 }
-#content_breed figcaption{
-    font-family: quasimoda-2,  'Palatino', Georgia, 'Times New Roman';
-    font-size: 25px;
-    font-weight: 600;
-    text-align: center;
+ figcaption{
+    display:none;
  }
+ img:hover{
+    transform: rotateY(180deg);
+ }
+ img:focus{
+    transform: rotateX(180deg);
+ }
+ @media screen and (min-width:800px) {
+    #content_breed{
+        grid-template-columns: repeat(2, 25%);
+    }
+    figcaption{
+        font-family: quasimoda-2,  'Palatino', Georgia, 'Times New Roman';
+        display:block;
+        line-height: 1.5;
+        font-weight: bold;
+        font-size: large;
+        background-color: #f9d949;
+        border: 5px black solid;
+        padding: 10px;
+        max-height: 80%
+    }
 
+ }
+ @media screen and (min-width:1200px) {
+    #content_breed{
+        grid-template-columns: repeat(4, 20%);
+    }
+
+ }
+ 
