--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,9 @@ h2{
     opacity: 1;
     animation: fade 2s linear;
 }
+main{
+  background-color: black;
+}
 p {
     position: absolute;
     text-align: center;
@@ -71,11 +74,12 @@ p {
     max-width: 40%;
     font-size: 20px;
     line-height: 1.5;
+    font-weight:bold;
     color: white;
     text-align:right;
     margin-left: auto;
     font-family:'Palatino', Georgia;
-
+    font-size:x-large;
   }
   
   @keyframes fade {
@@ -85,4 +89,10 @@ p {
     70% { opacity: 0.7 }
     100% {opacity: 1}
     }
+}
+
+@media (prefers-reduced-motion: reduce){
+  h2{
+    animation: none;
+  }
 }
