--- a/css/rd_fact.css
+++ b/css/rd_fact.css
@@ -11,13 +11,15 @@
   
   /* style for the header */
   h2 {
-    font-size: x-large;
-    margin-bottom: 1.5rem;
-    color: #333;
+    margin: 40px;
+    font-family: 'Palatino', Georgia, 'Times New Roman';
+    font-size: 50px;
+    font-weight: 600;
+    text-align: center;
   }
   
   /* style for the button */
-  button {
+  #yes_bt {
     font-size: 1.5rem;
     background-color: #3498DB;
     color: #fff;
@@ -28,8 +30,18 @@
     margin-bottom: 1rem;
     transition: all 0.3s ease;
   }
-  
-  
+  #yes_bt:hover{
+    background-color: gray;
+  }  
+  #yes_bt:not(:hover){
+    background-color: #3498DB;
+  }  
+  #yes_bt:focus{
+    background-color: gray;
+  }  
+  #yes_bt:not(:focus){
+    background-color: #3498DB;
+  } 
   /* style for the image */
   #hipster, #shake_head{
     display:none;
